[package]
name = "tweb"
version = "0.1.0"
authors = ["Astrale_works <ash4567@outlook.fr>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
typstfmt_lib = { git = "https://github.com/astrale-sharp/typstfmt" }
typst-syntax = { git = "https://github.com/typst/typst.git", tag = "v0.7.0" }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
